--- a/assets/css/style_index.css
+++ b/assets/css/style_index.css
@@ -184,9 +184,12 @@ a ,li{
     background-color: var(--main-color);
     color: #fff;
     padding: 10px 25px;
-    transition: all 0.2s ease-in-out;
     border: none;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.15s ease-in-out;
+    -webkit-transition: all 0.15s ease-in-out;
+    -moz-transition: all 0.15s ease-in-out;
+    -ms-transition: all 0.15s ease-in-out;
+    -o-transition: all 0.15s ease-in-out;
 }
 .form-btn:hover
 {
